feat: separate get documents API for roles & statuses
