# router/router.go
@@ -48,7 +48,8 @@ func setDocumentController(r *gin.Engine) {
 	r.PUT("/document/update", controllers.UpdateDocument)
 	r.POST("/document/add/viewer", controllers.AddViewer)
 	r.POST("/documents/author", controllers.GetAuthorDocuments)
-	r.POST("/documents/viewer", controllers.GetViewerDocuments)
+	r.POST("/documents/approver", controllers.GetApproverDocuments)
+	r.POST("/documents/verify", controllers.GetVerifyDocuments)
 	r.PUT("/document/update/status", controllers.SetDocumentStatus)
 	r.POST("/document/histories", controllers.GetDocumentHistories)
 	r.DELETE("/document", controllers.DeleteDocument)
